core/colorspace: relax validity check

The gamut area it checked was not unrealistic to hit on a real display; this
reduces the minimum area for built-in color profiles by 80% to prevent wrongly
discarding some of them as invalid.

BUG: 500295